--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,4 +18,10 @@
 
 body {
   color: rgb(var(--background-end-rgb));
+  box-sizing: border-box;
+  #__next {
+    display: flex;
+    width: 100vw;
+    background-color: red;
+  }
 }
